<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.mgnl.nicki.vaadin</groupId>
	<artifactId>nicki-vaadin</artifactId>
	<version>23.01-SNAPSHOT</version>
	<name>nicki-vaadin</name>
	<packaging>pom</packaging>
	<url>http://mgnl.org/nicki</url>
	<organization>
		<name>Ralf Hirning</name>
	</organization>
	<properties>
		<project.build.ssourceEncoding>iso-8859-1</project.build.ssourceEncoding>
		<idm.version>4.7</idm.version>
		<activemq-version>5.16.3</activemq-version>
		<nicki.version>11.01</nicki.version>
		<vaadin.version>23.3.30</vaadin.version>
		<log4j.version>2.17.1</log4j.version>
		<project.scm.id>github</project.scm.id>
        <jaxb.version>4.0.4</jaxb.version>
	</properties>
	<inceptionYear>2020</inceptionYear>
	<modules>
		<module>nicki-vaadin-apps</module>
		<module>nicki-vaadin-base</module>
		<module>nicki-vaadin-db</module>
		<module>nicki-vaadin-editor-log4j</module>
		<module>nicki-vaadin-editor-scripts</module>
		<module>nicki-vaadin-editor-templates</module>
		<module>nicki-vaadin-mq-browser</module>
		<module>nicki-vaadin-reports</module>
		<module>nicki-vaadin-user-admin</module>
	</modules>
    <dependencies>
        <dependency>
            <groupId>com.vaadin</groupId>
            <!-- Replace artifactId with vaadin-core to use only free components -->
            <artifactId>vaadin-core</artifactId>
            <exclusions>
                <!-- Webjars are only needed when running in Vaadin 13 compatibility mode -->
                <exclusion>
                    <groupId>com.vaadin.webjar</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.webjars.bowergithub.insites</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.webjars.bowergithub.polymer</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.webjars.bowergithub.polymerelements</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.webjars.bowergithub.vaadin</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.webjars.bowergithub.webcomponents</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>2.0.1.Final</version>
        </dependency>
        <!-- Bean validation implementation -->
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>7.0.1.Final</version>
        </dependency>
    </dependencies>
	<dependencyManagement>
        <dependencies>
	        <dependency>
	            <groupId>com.google.code.gson</groupId>
	            <artifactId>gson</artifactId>
	            <version>2.8.9</version>
	        </dependency>
            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-bom</artifactId>
                <version>${vaadin.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>3.1.0</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
				<version>${log4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>${log4j.version}</version>
			</dependency>
			<dependency>
			    <groupId>org.apache.logging.log4j</groupId>
			    <artifactId>log4j-slf4j-impl</artifactId>
				<version>${log4j.version}</version>
			</dependency>
			<dependency>
			    <groupId>org.apache-extras.beanshell</groupId>
			    <artifactId>bsh</artifactId>
			    <version>2.0b6</version>
			</dependency>
			<dependency>
				<groupId>org.glassfish</groupId>
				<artifactId>javax.json</artifactId>
				<version>1.1.4</version>
			</dependency>
	        <dependency>
	            <!-- jsoup HTML parser library @ https://jsoup.org/ -->
	            <groupId>org.jsoup</groupId>
	            <artifactId>jsoup</artifactId>
	            <version>1.15.3</version>
	        </dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>1.18.20</version>
				<scope>provided</scope>
			</dependency>
<dependency>
   <groupId>org.vaadin.klaudeta</groupId>
   <artifactId>quill-editor</artifactId>
   <version>1.0.1</version>
</dependency>
			<dependency>
				<groupId>in.virit</groupId>
				<artifactId>viritin</artifactId>
				<version>1.7.4</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
				    </archive>
				</configuration>
			</plugin>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-compiler-plugin</artifactId>
			    <version>3.8.0</version>
			    <configuration>
			        <release>11</release>
			    </configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>

				<dependencies>
					<dependency>
						<groupId>org.apache.maven.scm</groupId>
						<artifactId>maven-scm-provider-gitexe</artifactId>
						<version>1.9.5</version>
					</dependency>
				</dependencies>

				<configuration>
					<checkModificationExcludes>
						<checkModificationExclude>pom.xml</checkModificationExclude>
					</checkModificationExcludes>
					<arguments>-Dmaven.javadoc.skip=true</arguments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.2</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<configuration>
					<skipSource>true</skipSource>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.1.0</version>
			</plugin>
			<plugin>
			    <artifactId>maven-failsafe-plugin</artifactId>
			    <version>3.2.3</version>
			    <dependencies>
			        <dependency>
			            <groupId>com.sun.xml.bind</groupId>
			            <artifactId>jaxb-impl</artifactId>
			            <version>${jaxb.version}</version>
			        </dependency>
			    </dependencies>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>1.14</version>
				<configuration>
					<verbose>false</verbose>
					<addSvnKeyWords>false</addSvnKeyWords>
					<licenseName>apache_v2</licenseName>
					<excludes>
						<exclude>**/*.png</exclude>
						<exclude>**/*.txt</exclude>
						<exclude>**/*.properties</exclude>
						<exclude>**/*.json</exclude>
						<exclude>**/*.xml</exclude>
						<exclude>**/*.css</exclude>
						<exclude>**/*.xsl</exclude>
						<exclude>**/*.ftl</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<id>first</id>
						<goals>
							<goal>update-file-header</goal>
						</goals>
						<phase>process-sources</phase>
						<configuration>
							<licenseName>apache_v2</licenseName>
							<roots>
								<root>src/main/java</root>
								<root>src/test</root>
							</roots>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
			   <groupId>org.owasp</groupId>
			   <artifactId>dependency-check-maven</artifactId>
			   <version>8.3.1</version>
			   <configuration>
			   		<pnpmAuditAnalyzerEnabled>false</pnpmAuditAnalyzerEnabled>
			   </configuration>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
	</build>
	<licenses>
		<license>
			<name>Apache 2</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>manual</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>
	<scm>
		<connection>scm:git:https://github.com/rhirning/nicki-vaadin</connection>
		<developerConnection>scm:git:https://github.com/rhirning/nicki-vaadin</developerConnection>
		<url>scm:git:https://github.com/rhirning/nicki-vaadin</url>
		<tag>nicki-vaadin-14.53</tag>
	</scm>
	<distributionManagement>
		<repository>
			<id>releases</id>
			<url>https://nexus.hirning.de/nexus/content/repositories/releases</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<url>https://nexus.hirning.de/nexus/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>
</project>
